2002-08-14  Federico Mena Quintero  <federico@ximian.com>

	* dialogs/gedit-plugin-manager.c (plugin_manager_construct_tree):
	Install a custom search equal function for our non-string column.
	Fixes the treeview part of #90280.

2002-08-13  Federico Mena Quintero  <federico@ximian.com>

	Fixes #90231.

	* gedit-file-selector-util.c (ok_clicked_cb): Test whether the
	file is read-only and present a confirmation dialog in that case.
	(replace_read_only_file): New function.
	(replace_existing_file): Use the replace_dialog() core.
	(replace_dialog): Moved the replace_existing_file() code to here
	and made it more generic.

	* gedit-document.c (gedit_document_save_as): Tell
	gedit_document_save_as_real() to create a backup file.

	* gedit-file.c (gedit_file_open_uri_list):
	gtk_message_dialog_new() takes a printf() format, so don't compose
	the string first - it may contain percent signs which will screw
	us here.

	* gedit-print.c (gedit_print_error_dialog): Likewise.

2002-07-25  Paolo Maggi  <maggi@athena.polito.it>

	* gnome-recent-model.c (gnome_recent_model_add): free canonical_uri

	* gnome-recent-view-bonobo.c (gnome_recent_view_bonobo_set_list):
	fix appname

2002-07-23  Paolo Maggi  <maggi@athena.polito.it>

	Now gedit should work well with broken utf8 filenames.
	
	Modified files:
	* gedit-file.c
	* gnome-recent-model.c
	* gnome-recent-view-bonobo.c
	* gedit-document.c
	* gedit-utils.c
	* bonobo-mdi.c
	* gedit-file-selector-util.c

2002-07-23  James Willcox  <jwillcox@cs.indiana.edu>

	* gnome-recent-model.c:  Convert URIs to utf8 on the way in,
	convert back to the C library representation on the way out.

	* gnome-recent-view-bonobo.c (gnome_recent_view_bonobo_set_list):
	Escape relevant parts of the XML.  (#88362)

2002-07-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-file.c (gedit_file_open_uri_list): fix typo

2002-07-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-utils.c (gedit_utils_convert_search_text): fixed to work